feat: remove unnecessary fields when GET
