# docs/swagger.json
@@ -1145,6 +1145,17 @@
                 "name": {
                     "type": "string",
                     "example": "3D Printing"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    },
+                    "example": [
+                        1,
+                        2,
+                        3
+                    ]
                 }
             }
         },
@@ -1206,10 +1217,6 @@
         "models.MachineBasic": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string",
-                    "example": "2023-01-01T00:00:00Z"
-                },
                 "estimate_time": {
                     "description": "in minutes",
                     "type": "integer",
@@ -1226,10 +1233,6 @@
                 "quantity": {
                     "type": "integer",
                     "example": 2
-                },
-                "updated_at": {
-                    "type": "string",
-                    "example": "2023-01-01T00:00:00Z"
                 }
             }
         },
@@ -1282,16 +1285,18 @@
                 "updated_at": {
                     "type": "string",
                     "example": "2023-01-01T00:00:00Z"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.UserBasic"
+                    }
                 }
             }
         },
-        "models.TaskTypeBasic": {
+        "models.TaskTypeMinimal": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string",
-                    "example": "2023-01-01T00:00:00Z"
-                },
                 "description": {
                     "type": "string",
                     "example": "3D printing services"
@@ -1303,10 +1308,6 @@
                 "name": {
                     "type": "string",
                     "example": "3D Printing"
-                },
-                "updated_at": {
-                    "type": "string",
-                    "example": "2023-01-01T00:00:00Z"
                 }
             }
         },
@@ -1354,6 +1355,17 @@
                 "name": {
                     "type": "string",
                     "example": "3D Printing Updated"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    },
+                    "example": [
+                        1,
+                        2,
+                        3
+                    ]
                 }
             }
         },
@@ -1400,12 +1412,25 @@
                 "task_types": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.TaskTypeBasic"
+                        "$ref": "#/definitions/models.TaskTypeMinimal"
                     }
                 },
                 "updated_at": {
                     "type": "string",
                     "example": "2023-01-01T00:00:00Z"
+                }
+            }
+        },
+        "models.UserBasic": {
+            "type": "object",
+            "properties": {
+                "user_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "user_name": {
+                    "type": "string",
+                    "example": "John Doe"
                 }
             }
         },
